Edited metadata, fixed home header on mobile

--- a/_scss/2-basics/_header.scss
+++ b/_scss/2-basics/_header.scss
@@ -164,10 +164,6 @@
     .btn-menu {
       transform-origin: top right;
     }
-    &.header-home .logo-text,
-    .modal-header .logo-text {
-      display: none;
-    }
   }
 }
 
